--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ Pygments==2.3.1
 scandir==1.10.0
 simplegeneric==0.8.1
 six==1.11.0
-tensorflow-gpu==1.13.1
+tensorflow==1.13.1
 traitlets==4.3.2
 wcwidth==0.1.7
 webencodings==0.5.1
