--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ Pygments==2.3.1
 scandir==1.10.0
 simplegeneric==0.8.1
 six==1.11.0
+sphinx-rtd-theme==0.4.3
 tensorflow-gpu==1.13.1
 traitlets==4.3.2
 twine==1.13.0
